--- a/style_form.css
+++ b/style_form.css
@@ -1,5 +1,4 @@
 *{
-    /* padding - to word equal on all browsers */
     padding: 0;
     margin: 0;
 }
@@ -10,7 +9,7 @@ form{
     width: 33%;
     margin: auto;
     margin-top: 35%;
-    padding: 50px;
+    padding: 50px 20px;
     text-align: center;
     background-color: aqua;
     
